fix font on mobile

--- a/index.css
+++ b/index.css
@@ -106,6 +106,7 @@ body, html {
 
     .section-container {
         padding: 30px 0;
+        font-size: 35px;
     }
 
     .section-one-content {
